--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -19,7 +19,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let product of products">
-        <td><img [src]="'https://localhost:7202/images/products/'+product.imageUrl" width="50" height="50" /></td>
+        <td><img [src]="'http://pethospital.runasp.net/images/products/'+product.imageUrl" width="50" height="50" /></td>
         <td>{{ product.name }}</td>
         <td>{{ product.description }}</td>
         <td>{{ product.price }}</td>
