--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-4 mb-4">
         <div class="card h-100 text-center">
-          <img src="http://localhost:4200//src/assets/image/cute-cat-medical-examination-veterinary-clinic-measuring-blood-pressure.jpg" class="card-img-top" alt="Veterinary Care">
+          <img src="/assets/image/cute-cat-medical-examination-veterinary-clinic-measuring-blood-pressure.jpg" class="card-img-top" alt="Veterinary Care">
           <div class="card-body">
             <h5 class="card-title">Veterinary Care</h5>
             <p class="card-text">Comprehensive check-ups and treatments for your pets by our expert veterinarians.</p>
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card h-100 text-center">
-          <img src="http://localhost:4200//src/assets/image/beautiful-pet-portrait-dog.jpg" class="card-img-top" alt="Grooming">
+          <img src="/assets/image/beautiful-pet-portrait-dog.jpg" class="card-img-top" alt="Grooming">
           <div class="card-body">
             <h5 class="card-title">Grooming</h5>
             <p class="card-text">Keep your pets looking their best with our professional grooming services.</p>
@@ -24,7 +24,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card h-100 text-center">
-          <img src="http://localhost:4200//src/assets/image/close-up-veterinary-doctor-taking-care-pet.jpg" class="card-img-top" alt="Vaccinations">
+          <img src="/assets/image/close-up-veterinary-doctor-taking-care-pet.jpg" class="card-img-top" alt="Vaccinations">
           <div class="card-body">
             <h5 class="card-title">Vaccinations</h5>
             <p class="card-text">Protect your pets with our safe and effective vaccination programs.</p>
