--- a/src/app/testmonials/testmonials.component.html
+++ b/src/app/testmonials/testmonials.component.html
@@ -5,7 +5,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="card h-100 text-center mx-auto" style="max-width: 400px;">
-            <img src="/assets/images/client1.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Client 1" style="width: 100px; height: 100px; object-fit: cover;">
+            <img src="/assets/images/client1.jpeg" class="card-img-top rounded-circle mx-auto mt-3" alt="Client 1" style="width: 100px; height: 100px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Sarah M.</h5>
               <p class="card-text">"Pet Hospital saved my dog Max with their amazing care! The staff is so kind and professional."</p>
@@ -15,7 +15,7 @@
         </div>
         <div class="carousel-item">
           <div class="card h-100 text-center mx-auto" style="max-width: 400px;">
-            <img src="/assets/images/client2.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Client 2" style="width: 100px; height: 100px; object-fit: cover;">
+            <img src="/assets/images/client2.jpeg" class="card-img-top rounded-circle mx-auto mt-3" alt="Client 2" style="width: 100px; height: 100px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Ahmed K.</h5>
               <p class="card-text">"The grooming service transformed my cat Luna. She’s never looked better!"</p>
@@ -25,7 +25,7 @@
         </div>
         <div class="carousel-item">
           <div class="card h-100 text-center mx-auto" style="max-width: 400px;">
-            <img src="/assets/images/client3.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Client 3" style="width:100px; height:100px; object-fit: cover;" >
+            <img src="/assets/images/client3.jpeg" class="card-img-top rounded-circle mx-auto mt-3" alt="Client 3" style="width:100px; height:100px; object-fit: cover;" >
             <div class="card-body">
               <h5 class="card-title">Laila R.</h5>
               <p class="card-text">"Thanks to Pet Hospital’s vaccination program, my rabbit is healthy and happy!"</p>
