--- a/src/app/services-details/services-details.component.html
+++ b/src/app/services-details/services-details.component.html
@@ -18,7 +18,7 @@
     <div class="col-md-4 mb-4" *ngFor="let service of services">
       <div class="card shadow-sm border-light h-100">
         <!-- Service Image -->
-        <img [src]="'http://pethospital.runasp.net/images/services/'+service.imageUrl || 'assets/default-service.jpg'"
+        <img [src]="'https://pethospital.runasp.net/images/services/'+service.imageUrl || 'assets/default-service.jpg'"
              class="card-img-top img-fluid"
              alt="{{service.name}}"
              >
